# profile-viewer

./: .gitignore  airtable_sync.py  cli.py  manage.py  pyproject.toml
profile_viewer/: asgi.py  settings.py  urls.py  wsgi.py
profiles/: models.py  serializers.py  views.py
profiles/migrations/: 0001_initial.py  0002_photo_airtable_id.py  0003_psychotherapist_airtable_id.py
